# neural_rx

./: .env.example  .gitignore  CONFIGURATION_SUMMARY.md  FINAL_USER_INSTRUCTIONS.md  QUICKSTART.md  README.md  SETUP.md  SETUP_OLD.md  UPDATE_SUMMARY.md  VerifyGPU_CUDA_cuDNN.ipynb  activate_gpu.sh  pyproject.toml  requirements.txt  setup.sh  verify_gpu.py
config/: nrx_large.cfg
docs/: CONFIG_PARAMS_COMPARISON.md  DEBUG_MODES.md  FINAL_SIMPLIFICATION_SUMMARY.md  GPU_SELECTION_GUIDE.md  GPU_SETUP_FINAL.md  NeuralPUSCHReceiver深度解析.md  NeuralPUSCHReceiver结构与信号流.md  PATH_RESOLUTION_SYSTEM.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START_FINAL.md  TENSORFLOW_GPU_FIX.md  env_config_fix.md  linux_only_migration.md  uv_dependency_resolution_fix.md  uv_python_management.md  verify_gpu_upgrade.md  verify_gpu_usage.md
scripts/: compute_cov_mat.py  evaluate.py  export_onnx.py  train_neural_rx.py
utils/: onnx_utils.py  parameters.py  project_paths.py  utils.py
