[project]
name = "neural-rx"
version = "0.1.0"
description = "NVIDIA Neural Receiver for 5G NR Physical Layer"
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [
    {name = "NVIDIA CORPORATION & AFFILIATES"},
]
license = {text = "LicenseRef-NvidiaProprietary"}

dependencies = [
    "numpy>=1.24.0,<2.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
    "notebook>=7.0.0",
    "psutil>=5.9.0",  # 系统信息查询
]

[project.optional-dependencies]
windows-cpu = [
    "tensorflow-cpu==2.10.1; platform_system == 'Windows'",
    "sionna==0.14.0; platform_system == 'Windows'",
    "onnx==1.12.0; platform_system == 'Windows'",
    "tf2onnx<1.16.0; platform_system == 'Windows'",
]

linux-cpu = [
    "tensorflow-cpu==2.15.0; platform_system == 'Linux'",
    "sionna==0.18.0; platform_system == 'Linux'",
    "mitsuba==3.5.2; platform_system == 'Linux'",
    "onnx==1.14.0; platform_system == 'Linux'",
    "tf2onnx>=1.16.0; platform_system == 'Linux'",
]

linux-gpu = [
    "tensorflow==2.15.0; platform_system == 'Linux'",
    "sionna==0.18.0; platform_system == 'Linux'",
    "mitsuba==3.5.2; platform_system == 'Linux'",
    "onnx==1.14.0; platform_system == 'Linux'",
    "tf2onnx>=1.16.0; platform_system == 'Linux'",
    "polygraphy>=0.49.0; platform_system == 'Linux'",
    "tensorrt>=9.6.0; platform_system == 'Linux'",
    "nvidia-cudnn-cu12>=9.0.0; platform_system == 'Linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 这个项目主要是脚本和笔记本,不是传统的 Python 包
# 只包含 utils 目录
packages = ["utils"]

[tool.uv]
# 不指定默认的 extra,用户需要显式选择
default-groups = []

# 只为当前平台解析依赖(避免跨平台依赖冲突)
# Windows 用户只解析 Windows 兼容的包
# Linux 用户只解析 Linux 兼容的包
required-environments = ["platform_system == 'Windows'"]

# 定义冲突的 extras - windows-cpu, linux-cpu, linux-gpu 互斥
conflicts = [
    [
        { extra = "windows-cpu" },
        { extra = "linux-cpu" },
    ],
    [
        { extra = "windows-cpu" },
        { extra = "linux-gpu" },
    ],
    [
        { extra = "linux-cpu" },
        { extra = "linux-gpu" },
    ],
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
