[project]
name = "neural-rx"
version = "0.1.0"
description = "NVIDIA Neural Receiver for 5G NR Physical Layer"
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [
    {name = "NVIDIA CORPORATION & AFFILIATES"},
]
license = {text = "LicenseRef-NvidiaProprietary"}

dependencies = [
    "numpy>=1.24.0,<2.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
    "notebook>=7.0.0",
    "psutil>=5.9.0",  # 系统信息查询
]

[project.optional-dependencies]
# Linux CPU 环境 (开发和小规模实验)
cpu = [
    "tensorflow-cpu==2.15.0",
    "sionna==0.18.0",
    "mitsuba==3.5.2",
    "onnx==1.14.0",
    "tf2onnx>=1.16.0",
]

# Linux GPU 环境 (生产训练和推理 - 推荐)
gpu = [
    "tensorflow==2.15.0",
    # CUDA 12.2 + cuDNN 8.x 支持包 (匹配 TensorFlow 2.15.0 编译版本)
    "nvidia-cudnn-cu12==8.9.7.29",  # cuDNN 8.9 for CUDA 12
    "nvidia-cuda-runtime-cu12==12.3.101",
    "nvidia-cublas-cu12==12.3.4.1",
    "nvidia-cufft-cu12==11.0.12.1",
    "nvidia-curand-cu12==10.3.4.107",
    "nvidia-cusolver-cu12==11.5.4.101",
    "nvidia-cusparse-cu12==12.2.0.103",
    # 其他依赖
    "sionna==0.18.0",
    "mitsuba==3.5.2",
    "onnx==1.14.0",
    "tf2onnx>=1.16.0",
    "polygraphy>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 这个项目主要是脚本和笔记本,不是传统的 Python 包
# 只包含 utils 目录
packages = ["utils"]

[tool.uv]
# 不指定默认的 extra,用户需要显式选择 cpu 或 gpu
default-groups = []

# 定义冲突的 extras - cpu 和 gpu 互斥
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
